--- a/2025/week_48/insta_weekly_2025_48_gpt-5-2025-08-07.md
+++ b/2025/week_48/insta_weekly_2025_48_gpt-5-2025-08-07.md
@@ -1,120 +1,121 @@
 # Weekly Instagram Beauty Media Landscape Report
 
-- Key Takeaway: Nov 24–30, 2025 delivered a Black Friday-fueled spike in indie launches and sparkle-forward, alt-goth beauty. Kaleidos’ comeback (Moon Arcade), Cosmic Brushes’ Death Tarot palette, and Rituel de Fille’s Ghost Frequency drove the week’s demand while creators leaned into grungy holiday reds/greens, iridescent lips, and oil-slick eye gloss.
+- Key Takeaway: Nov 24–30, 2025 leaned hard into grunge-glam holiday beauty: moody tarot palettes, sparkly oil-slick lids, and “fun makeup is back” lip toppers. Kaleidos’ comeback and a trio of holiday palettes (Cosmic Beauty Death, Dede Signature Festive Elegance, Lethal Serpentine) set the tone, while comment threads signaled real purchase intent and comparison-shopping.
 
 ## 1. Overview
 
 - The Vibe:
-  - Launch-and-swatch week: fast-cut reels, macro arm swatches, side-by-side comparisons, and creator “top recs” dominated.
-  - Looks skewed alt and editorial: graphic liners (snowflakes, claw wings), oil-gloss lids, heavy inner-corner-to-brow shimmer streaks, and bleached/soft brows.
-  - Holiday palettes were “grunge Christmas” (depthy reds/greens, chartreuse, teal) vs. standard festive glam.
-
+  - Product-first swatch reels and side-by-side comparisons dominated (palette dupe checks, shade match-offs).
+  - High-shine textures everywhere: holo/iridescent multichromes, sparkly balms, and true eye gloss “oil-slick” lids.
+  - Strong creative looks anchoring launches: graphic snowflake liner, pastel winter rainbows, “medieval core” jewel-tone curation, and goth holiday beats.
 - Engagement Temperature:
-  - Buyers asked for links, code stacking, comparisons, and undertone breakdowns; multiple “this shall be mine,” “add to cart,” and OOS mentions.
-  - Teaching/troubleshooting content performed: brush recs, liner technique, and “keep your face still” application hacks spurred saves/shares.
-  - Viral resonance clusters: Kaleidos new red liner staying red; Cosmic Brushes comparisons (Death vs Sinister/Cooltrals/Smolder); Rituel’s GWPs strategy.
+  - Hot. Threads filled with “add to cart,” restock notes, and “link/code?” asks. Multiple requests for comparison swatches (Cosmic Beauty Death vs Sinister/Cooltrals/Smolder) and for a true sparkly red that stays red.
+  - Practical queries: tools for water-activated liner; eye gloss creasing; shade comparisons; retailer/region access (UK demand for RdF).
 
 ## 2. Product Momentum (Brand & Item Velocity)
 
 - Top Mentioned Brands:
-  - Kaleidos, Cosmic Brushes, Rituel de Fille, Dede’s Signature, Lethal Cosmetics.
-  - Secondary heat: Bella Beauté Bar, Melt, Terra Moons, Clionadh, Blend Bunny, Danessa Myricks.
+  - Kaleidos, Cosmic Beauty/Cosmic Brushes, Rituel de Fille, Lethal Cosmetics, Dede Signature, Clionadh, Bella Beauté Bar, Unearthly, Melt, Terra Moons, Blend Bunny, Half Magic, Glisten.
 
 - Viral Products:
   - Kaleidos Moon Arcade:
-    - Epiphany Glow Melt-On Eyeliners (new shades) with standout Scarlet Striker (true red noted as “stays red”); Miss Matrix/Aurora Runner caught attention.
-    - Glass Load Lip Melts (refillable) — iridescent, gray, and lilac toppers (Frizz Melt, Cheat Code, Geek Out, Stranger) favored for “fun” combos.
-    - New lip liners (Dark Matter, Java, Merlot) praised for glide + set.
-  - Cosmic Brushes Death Tarot palette:
-    - Demand for comparable swatches vs Sinister/Cooltrals/Smolder; comments signal “unique,” “shall be mine,” and metallic red hunt.
-    - Shimmers incl. holochromes; smoky-matte depth plus chartreuse/teal pulled “grunge holiday” energy.
-  - Rituel de Fille Ghost Frequency (BF GWPs + individual):
-    - Snowdrop Color Nectar (cool cherry blossom), Apparition Rare Light (fuchsia flash), Crux eye gloss (grungy silver-brown oil-slick), Hemlock Lip Sheer (obsidian purple), Midnight Glow thorn lip oil (rust with blue/green sparkle).
-    - High “I need this,” “going to buy enough for all GWPs” sentiment; eye gloss embraced as one-and-done.
-  - Dede’s Signature Festive Elegance:
-    - Fully magnetic 15-pan + matching gradient singles; sparkly shimmers with a true red matte and non-staining claim resonated; “immediate add to cart.”
-  - Lethal rebrand:
-    - Serpentine palette (pink/green serpent story with holochrome + multichromes) and Infinity Lip Stains; palette builder and US shipping callouts lowered friction.
-  - Also noted:
-    - Bella Beauté Bar recs sparked OOS chatter (Ocean Jewel). Clionadh stained glass restock drove “How to buy?” comments. Terra Moons Celestine Dust got “most beautiful blue shift” reactions. Melt Edward Scissorhands (liners, toppers) fed nostalgic buys. Jolie Beauty metallic lips (teal, vamp) trended in alt looks.
+    - Epiphany Glow eyeliners (Scarlet Striker red, Miss Matrix blue, Moon Mechanic grey) — praised for budge-proof wear and color fidelity; red that “stays red” resonated.
+    - Glass Load Lip Melts (grey Stranger; lilac Geek Out; sparkly Cheat Code/Frizz Melt/Pixel Storm/Cypher) — strong swatch-to-cart momentum; comparisons requested vs Fenty/Joocyee shimmer sticks.
+    - New lip liners (Merlot, Dark Matter, Java) — “creamy with playtime” feedback.
+  - Cosmic Beauty (Cosmic Brushes) Death Tarot palette:
+    - “Grungy but colorful” color story with holo/shifty shimmers; heavy demand signals; repeated asks for comparisons to Sinister/Cooltrals/Smolder.
+  - Dede Signature Festive Elegance:
+    - Fully magnetic holiday story (greens/reds/golds + two gradient singles). Comments: “immediate add to cart”; “need this palette”; appreciated depth without staining.
+  - Rituel de Fille Ghost Frequency (BF exclusives):
+    - Crux eye gloss (brown base, silver sparkle): oil-slick, one-and-done looks; accepted creasing trade-off.
+    - Apparition Rare Light crème luminizer (fuchsia flash): “pure glow without sparkle.”
+    - Midnight Glow Thorn Bite lip oil (rust red with green/blue shimmer); Snowdrop Color Nectar (cool cherry blossom pink); Hemlock Lip Sheer (obsidian purple). Buyers planning $200–$250+ carts to hit GWP tiers; UK availability asked.
+  - Lethal Cosmetics rebrand:
+    - Serpentine palette (pink/green + depth; multichromes incl. holochrome). “I bought it” comments; builder tool back; US warehouse (tariff-free) called out.
+    - Infinity Lip Stains (Deadly Nightshade) + Slide balm — “easy control, lasting stain.”
+  - Clionadh Stained Glass singles:
+    - Blurple set love: Tessera, Regal, Enamel, Statuary/Statue Garden, Quest — “added to BF order,” “how to buy/link.”
+  - Bella Beauté Bar:
+    - Poison Garden, Dark Dreamscape, Ocean Jewel (OOS) — multi-comments naming favorites; noted stockouts.
+  - Terra Moons: Celestine Dust spotlighted for blue shift + red sparkles.
+  - Melt x Edward Scissorhands: Slick Waterline pencils; Lustre Slick topper — niche but sticky interest.
+  - Unearthly: Dead Cute lip bundle; olive “menacing metals” shade quietly coveted; “bought set just for the green.”
 
 - The “Look” Breakdown:
   - Eyes:
-    - Textures: multichrome/holo/shifty toppers, chunky sparkles, and high-gloss gelee eye gloss (oil-slick).
-    - Shades repeated: red shimmer/metallics, chartreuse/lime, teal/navy, lavender-lilac, periwinkle/blue, mustard/olive, silver.
-    - Techniques: graphic/blocked liner (snowflakes, extended red “claw” wings), waterlines in red/blue, inner-corner shimmer drawn vertically to brow, gems.
+    - Repeated textures: holo/jeweled multichromes, glitter toppers, and true gelée gloss (wet, reflective).
+    - Shades: grunge jewel tones (teal/olive/forest), blurples, steely greys, lavender/lilac inflections, mustard/gold pops; demand for non–black-based sparkly reds.
+    - Techniques: graphic liner (snowflakes, six points called out), block shimmer liner, inner-corner high-beam shifts, oil-slick all-over shine.
   - Lips:
-    - Glossy oils and sparkly balms/sticks; gray/greige, lilac, rusty red sparkles; deep brown liners + iridescent toppers; metallic teal moments.
-  - Cheeks:
-    - Cream balms and flushed pink across nose/cheekbone; luminous fuchsia/pink highlighters (non-glitter glow).
+    - Liner-heavy, dark-contoured mouths (Merlot/Dark Matter/Java); high-shine toppers; grey/nude taupes; metallics (teal); lip stains + balm topcoats.
+  - Cheeks/Highlight:
+    - Cool cherry-pink blush placements (across nose/temples), cream/liquid glow; fuchsia highlighter “sheen not sparkle”; suspended sparkle balms as halo accents.
 
 ## 3. Aesthetic & Hashtag Trends
 
 - Visual Themes:
-  - #gothmakeup, #grungemakeup, #softgoth stayed dominant.
-  - “Medieval core” curation: jewel tones + parchment/beige + metals; tarot props, skulls, velvet, holiday flatlays with cookies/lights.
-  - “Wicked green + pink” palette customs, anime/film-inspired (Angel’s Egg) looks.
-
+  - #gothmakeup, #grungemakeup, #softgoth + holiday (#festiveelegance) and tarot/gothic props (cards, skulls, candles).
+  - “Medieval core” curations (aged parchment shades, metals) and “oil-slick” lids (Crux).
+  - #pastelmakeup winter collabs; snowflake graphic liner; gem accents on graphic elements.
 - Color Stories:
-  - Holiday depth: true reds + emerald/olive/forest + mustard.
-  - Cool brights: chartreuse, teal, periwinkle, holo silver; cool pink/fuchsia glow.
-  - Lips: gray/greige, lilac, deep brown; rust-red sparkles.
+  - Grunge jewel tones (emerald/teal/forest), blurple suites, olive-mustard-gold, cool pink-violet accents, steel/graphite grey, and select true reds.
+  - Lips trend cool: greys/taupes, obsidian purples, berry stains; occasional metallic teal.
 
 ## 4. Purchase-Intent Signals (From Comments)
 
 - “Add to Cart” Energy:
-  - Cosmic Brushes Death: “This shall be mine,” “probably going to buy it anyway.”
-  - Dede’s Festive Elegance: “Immediate add to cart,” “I need this palette.”
-  - Rituel de Fille Ghost Frequency: multiple planning to spend to hit all GWP tiers.
-  - Kaleidos Moon Arcade: “I need that grey balm,” “so excited to smother myself in that red.”
-
+  - Cosmic Beauty Death: “Yep, this shall be mine,” “buy it anyway.”
+  - Dede Festive Elegance: “Immediate add to cart,” “I need this palette.”
+  - Kaleidos: “I need that grey balm immediately,” “I cannot wait to wear this eyeliner,” “I got the red liner.”
+  - Rituel de Fille: “Going HAM for all freebies,” “I can’t wait to buy this!!”
+  - Lethal Serpentine: “I bought the palette,” “consider me tempted.”
+  - Clionadh: “Added Tessera to my BF order.”
 - Restock Demands:
-  - Bella Beauté Bar Ocean Jewel reported OOS; users pivoted to other palettes.
-  - Longstanding desire for a true metallic/sparkly red (commenters cite sold-out reds, request non-orange/non-black-base reds).
-
+  - Bella Beauté Bar Ocean Jewel “out of stock” noted; desire for return.
 - Curiosity Clusters:
-  - Comparisons: Death vs Sinister/Cooltrals/Smolder; Kaleidos Lip Melts vs Lip Glaze; red shimmers vs “Ruby Flame.”
-  - Performance: “Does the red liner stay red?” (affirmed), eye gloss creasing tolerance (addressed as expected but worth it).
-  - Tools: “Best brush for water-activated liner?”; brush guides/reels received strong engagement.
-  - Buying logistics: “How do we buy?” “Link?” “Is the BF sale 20%?”
+  - “True sparkly red that doesn’t shift orange/black base?” (shadows)
+  - Comparison swatches: Death vs Sinister/Cooltrals/Smolder; Kaleidos lip melts vs prior lip glazes; red shimmer vs Ruby Flame.
+  - Tools: best brush for water-activated liners.
+  - Eye gloss: longevity/creasing trade-offs.
+  - Regional: UK availability for RdF BF exclusives.
 
 ## 5. Opportunities for the Store
 
 - Stocking Recommendations:
-  - High priority:
-    - Kaleidos Moon Arcade: Epiphany Glow (Scarlet Striker, Miss Matrix) + Glass Load Lip Melts (gray/iridescent toppers) + nude lip liners (Dark Matter/Java/Merlot).
-    - Cosmic Brushes Death Tarot palette; if possible, carry or pre-sell complementary comparison targets (Sinister/Cooltrals/Smolder) or create in-house shade twins.
-    - Rituel de Fille Ghost Frequency SKUs (Snowdrop, Apparition, Crux, Hemlock, Midnight Glow) and core Levitation Lash.
-    - Lethal Serpentine + Infinity Lip Stains; spotlight US-warehouse shipping in PDP.
-  - Complementary heroes:
-    - Clionadh stained glass singles, Terra Moons Celestine Dust, Bella Beauté Bar Poison Garden/Dark Dreamscape.
-    - Melt Edward Scissorhands toppers/pencils for nostalgia-driven shoppers.
-    - Tools: Rose & Ben E29, Rare Beauty blush brush, MyKitCo powder, plus precise liner brushes for water-activated formulas.
-
+  - Kaleidos Moon Arcade:
+    - Epiphany Glow eyeliners (Scarlet Striker, Miss Matrix, Moon Mechanic).
+    - Glass Load Lip Melts (Stranger grey, Geek Out lilac, sparkle toppers Cheat Code/Frizz Melt/Pixel Storm/Cypher) + lip liners (Merlot, Dark Matter, Java).
+  - Palettes with depth and holiday pull:
+    - Cosmic Beauty Death; Dede Signature Festive Elegance (plus the two gradient singles).
+    - Lethal Serpentine + Infinity Lip Stains (Deadly Nightshade).
+  - High-shine singles/topper ecosystem:
+    - Clionadh blurples (Tessera, Regal, Enamel, Statue Garden, Quest).
+    - Terra Moons Celestine Dust.
+    - Rituel de Fille Ghost Frequency (Crux, Apparition, Snowdrop, Midnight Glow, Hemlock).
+  - Accent lips:
+    - Unearthly Dead Cute lip bundle (olive “menacing metals,” Toxic Taffy); metallic teals (Jolie Beauty Earthly).
 - Content Strategy:
-  - Side-by-side swatch reels: satisfy comparison requests (Death vs Sinister; “true red” stack-off across brands).
-  - “Stays Red” stress test: wear-test Scarlet Striker vs competitors under warm lighting.
-  - One-and-done looks: Crux oil-slick eye in 15 seconds; inner-corner-to-brow shimmer trick.
-  - Themed curations: “Grunge Christmas” kit (red/green + holo topper), “Medieval core metals,” “Wicked green + pink.”
-  - Education shorts: Robert Welsh-style “keep face still,” water-activated liner brush demos, eye gloss on hooded lids (prep/placement).
-
+  - Lean into comparison reels and “shade families” swatches (Death vs Sinister + “true red” showdown). These drove comments and conversion.
+  - Quick tutorial reels for graphic liner (snowflakes, block shimmer liner) featuring long-wear shimmer liners + tool callouts.
+  - “One-and-done lid” demos (Crux/gelée gloss; multichrome toppers) with honest creasing notes and base tips.
+  - Lip lab: liner + balm/glitter topper combos (grey/taupe + iridescent melt) — high save/share rate.
 - Gap Analysis:
-  - True sparkly/metallic red without orange shift/black base: curate best-in-class and commission swatch proof.
-  - Water-activated liner brushes: clear recs + bundles with liners.
-  - Eye gloss guidance: crease-aware techniques (thin layers, strategic placement, set edges) to reduce returns.
+  - Fill the “true sparkly red, no black base/no orange shift” shadow gap (stock or commission indie singles precisely in this spec).
+  - UK/EU access: offer Rituel de Fille event shades where possible or provide region-friendly alternatives.
+  - Tools: curate a water-activated liner brush edit (fine detail + firm tip) and promote with graphic-liner content.
+  - Stock replenishment: BBB Ocean Jewel analogs or notify lists for restock.
 
-## 6. Special Insights
+## 6. Special insights
 
 - Emerging Micro-Trends:
-  - Gray is the new neutral: gray lip balms/glosses/liners; greige taupes paired with blue sparkles.
-  - Oil-slick eyes: brown/silver gelee with high-wet glare replacing pressed glitter for “one-and-done.”
-  - Holochromes back on the lid; holographic sparkle called out repeatedly.
-
+  - Grey lip era: grey balms, taupe liquid lips, cool brown-black glosses — consistently praised and purchased across posts.
+  - Oil-slick lids as a staple: gelée/gloss textures (Crux) used alone or over smokey bases; acceptance of natural creasing for the payoff.
+  - Fuchsia, no-glitter highlighter (Apparition) as daily-cool color glow — an antidote to icy silvers.
 - Unexpected Pairings:
-  - Multi-use pigments: blush balms on eyes/lips; suspended sparkle balms as nose/above-crease highlights.
-  - Red waterline pairings with neutral lids; periwinkle lower lash pops under green lids.
-
+  - Lip oil over lip sheer for dimensional, comfortable depth (Hemlock + Midnight Glow).
+  - Palette modularity: holiday palettes with swappable gradient singles to add inner-corner/brow-bone iridescents.
+  - Metallic teal lip topped with green sparkle (Unearthly over Jolie “Earthly”) — editorial lips moving product.
 - Creative insight:
-  - Lean into “ritual objects” visual language (tarot cards, velvet, candles) for holiday alt-glam: it photographed and performed better than sterile flatlays.
-  - Promote refillability/modularity (Kaleidos refillable lip melts; Dede’s magnetic pans) as value during BF—audiences reward sustainable, customizable systems.
-  - Bundle “Practice Makes Precision” kits: water-activated liners + pro liner brush + eye gloss + gem adhesive, targeting the graphic-liner resurgence (snowflakes/linework).
+  - “Medieval core” curation boxes are an opportunity: pre-bundled jewel tones + parchment neutrals + metallic accents with a narrative (Gawain/illuminated manuscript themes). Pair with gothic silver “armor” accessories content to drive cross-category AOV.
+  - Winter pastels x graphic white: sell a “snowflake kit” (white water-activated liner, gem accents, long-wear shimmer liner) plus the right brush — users asked for brush recs.
+  - Blurple mania has legs: dedicate an iridescent-violet/blue editorial page (Clionadh + Terra Moons + Blurples from palettes) with daylight/flash swatch toggles to answer “link?” and “how to buy?” friction quickly.
