--- a/2025/week_48/insta_weekly_2025_48_gpt-5-2025-08-07.md
+++ b/2025/week_48/insta_weekly_2025_48_gpt-5-2025-08-07.md
@@ -1,121 +1,124 @@
 # Weekly Instagram Beauty Media Landscape Report
 
-- Key Takeaway: Nov 24–30, 2025 leaned hard into grunge-glam holiday beauty: moody tarot palettes, sparkly oil-slick lids, and “fun makeup is back” lip toppers. Kaleidos’ comeback and a trio of holiday palettes (Cosmic Beauty Death, Dede Signature Festive Elegance, Lethal Serpentine) set the tone, while comment threads signaled real purchase intent and comparison-shopping.
+- Key Takeaway: Nov 24–30, 2025 saw a grunge-holiday crossover: red/green “Christmas with depth,” blurple sparkles, and oil‑slick gloss looks dominated. Tutorial reels, side‑by‑side comparisons, and swatch carousels around new drops (Cosmic Brushes Death, Kaleidos Moon Arcade, Rituel de Fille Ghost Frequency, Lethal Serpentine) unlocked the highest purchase intent.
 
 ## 1. Overview
 
 - The Vibe:
-  - Product-first swatch reels and side-by-side comparisons dominated (palette dupe checks, shade match-offs).
-  - High-shine textures everywhere: holo/iridescent multichromes, sparkly balms, and true eye gloss “oil-slick” lids.
-  - Strong creative looks anchoring launches: graphic snowflake liner, pastel winter rainbows, “medieval core” jewel-tone curation, and goth holiday beats.
+  - Pre–Black Friday flood of launch reels, macro swatches, and comparison content (Cosmic Brushes Death vs Sinister/Cooltrals/Smolder; Kaleidos new liners/lip melts vs earlier gloss formulas).
+  - Alt/goth artistry anchored the feed (graphic red liner, snowflake liner, oil‑slick eye gloss, blurple multichromes) with holiday color stories shown in moody lighting, macro sparkle, and editorial flatlays (tarot props, festive cookies).
+  - GRWM/tutorial narrations and “not‑to‑miss shades” roundups performed best; static macro lips/eyes supported product texture storytelling.
+
 - Engagement Temperature:
-  - Hot. Threads filled with “add to cart,” restock notes, and “link/code?” asks. Multiple requests for comparison swatches (Cosmic Beauty Death vs Sinister/Cooltrals/Smolder) and for a true sparkly red that stays red.
-  - Practical queries: tools for water-activated liner; eye gloss creasing; shade comparisons; retailer/region access (UK demand for RdF).
+  - Hot. Repeated “add to cart,” “link?”, “code stacks?”; heavy comparison requests; multiple “sold out”/restock mentions; region questions (UK availability). Brand replies and creator code guidance kept momentum high.
 
 ## 2. Product Momentum (Brand & Item Velocity)
 
 - Top Mentioned Brands:
-  - Kaleidos, Cosmic Beauty/Cosmic Brushes, Rituel de Fille, Lethal Cosmetics, Dede Signature, Clionadh, Bella Beauté Bar, Unearthly, Melt, Terra Moons, Blend Bunny, Half Magic, Glisten.
+  - Cosmic Brushes, Rituel de Fille, Kaleidos, Dede’s Signature, Lethal Cosmetics, Clionadh, Bella Beauté Bar, Shellwe Makeup, Unearthly, Terra Moons, Melt, Blend Bunny, MOB Beauty, Glisten.
 
-- Viral Products:
-  - Kaleidos Moon Arcade:
-    - Epiphany Glow eyeliners (Scarlet Striker red, Miss Matrix blue, Moon Mechanic grey) — praised for budge-proof wear and color fidelity; red that “stays red” resonated.
-    - Glass Load Lip Melts (grey Stranger; lilac Geek Out; sparkly Cheat Code/Frizz Melt/Pixel Storm/Cypher) — strong swatch-to-cart momentum; comparisons requested vs Fenty/Joocyee shimmer sticks.
-    - New lip liners (Merlot, Dark Matter, Java) — “creamy with playtime” feedback.
-  - Cosmic Beauty (Cosmic Brushes) Death Tarot palette:
-    - “Grungy but colorful” color story with holo/shifty shimmers; heavy demand signals; repeated asks for comparisons to Sinister/Cooltrals/Smolder.
-  - Dede Signature Festive Elegance:
-    - Fully magnetic holiday story (greens/reds/golds + two gradient singles). Comments: “immediate add to cart”; “need this palette”; appreciated depth without staining.
-  - Rituel de Fille Ghost Frequency (BF exclusives):
-    - Crux eye gloss (brown base, silver sparkle): oil-slick, one-and-done looks; accepted creasing trade-off.
-    - Apparition Rare Light crème luminizer (fuchsia flash): “pure glow without sparkle.”
-    - Midnight Glow Thorn Bite lip oil (rust red with green/blue shimmer); Snowdrop Color Nectar (cool cherry blossom pink); Hemlock Lip Sheer (obsidian purple). Buyers planning $200–$250+ carts to hit GWP tiers; UK availability asked.
-  - Lethal Cosmetics rebrand:
-    - Serpentine palette (pink/green + depth; multichromes incl. holochrome). “I bought it” comments; builder tool back; US warehouse (tariff-free) called out.
-    - Infinity Lip Stains (Deadly Nightshade) + Slide balm — “easy control, lasting stain.”
-  - Clionadh Stained Glass singles:
-    - Blurple set love: Tessera, Regal, Enamel, Statuary/Statue Garden, Quest — “added to BF order,” “how to buy/link.”
-  - Bella Beauté Bar:
-    - Poison Garden, Dark Dreamscape, Ocean Jewel (OOS) — multi-comments naming favorites; noted stockouts.
-  - Terra Moons: Celestine Dust spotlighted for blue shift + red sparkles.
-  - Melt x Edward Scissorhands: Slick Waterline pencils; Lustre Slick topper — niche but sticky interest.
-  - Unearthly: Dead Cute lip bundle; olive “menacing metals” shade quietly coveted; “bought set just for the green.”
+- Viral Products (intent signals and asks):
+  - Cosmic Brushes Death palette (multiple creators: reels + swatches). Comments: “this shall be mine,” “always sold out—hope to get one,” requests for comparisons to Sinister/Cooltrals/Smolder and red shimmer comparisons (e.g., Ruby Flame).
+  - Dede’s Signature Festive Elegance palette (+ magnetic gradient singles). Comments: “immediate add to cart,” “I need this palette,” “bring this back.”
+  - Rituel de Fille Ghost Frequency (Snowdrop Color Nectar, Apparition luminizer, Crux eye gloss, Midnight Glow lip oil, Hemlock lip sheer). Comments: “I’m buying enough to get all freebies,” “Is BF 20%?” “Need in UK.” Acknowledged creasing on eye gloss accepted for payoff.
+  - Kaleidos Moon Arcade: Epiphany Glow melt‑on eyeliners (Scarlet Striker red) and Glass Load Lip Melts (notably gray and iridescent shades) + new lip liners (Dark Matter, Java). Comments: “I need that grey balm,” “Got the red liner,” “compare to lip glazes?”
+  - Lethal Cosmetics Serpentine palette + Infinity Lip Stains (Deadly Nightshade) + new singles; US warehouse shipping (no tariffs). Comments: “I bought,” “tempted,” palette builder back.
+  - Clionadh Stained Glass restock content (blurples and “9 not to overlook”). Comments: “How do we buy? Link,” code‑stacking noted; shades added to carts.
+  - Shellwe x ghoul “Nocturnal Flame” (palette + taupe/gray/brown‑black glosses). Big hype: “I am so getting this.”
+  - Unearthly “Dead Cute” lipstick bundle—olive metallic and bright pink/lilac glitters. Comments: “Bought the set just for the green.”
+  - Bella Beauté Bar sale recs (Poison Garden, Dark Dreamscape, Ocean Jewel). Comments: “Ocean Jewel is out of stock—got others.”
 
-- The “Look” Breakdown:
+- The “Look” Breakdown (what’s recurring):
   - Eyes:
-    - Repeated textures: holo/jeweled multichromes, glitter toppers, and true gelée gloss (wet, reflective).
-    - Shades: grunge jewel tones (teal/olive/forest), blurples, steely greys, lavender/lilac inflections, mustard/gold pops; demand for non–black-based sparkly reds.
-    - Techniques: graphic liner (snowflakes, six points called out), block shimmer liner, inner-corner high-beam shifts, oil-slick all-over shine.
+    - Sparkly multichromes (blurple/teal/green), holochromes, red metallics, and silver grit; extended inner-corner highlight up to brow bone; oil‑slick gelée gloss lids; macro shimmer texture emphasis.
+    - Graphic liner resurgence: crisp red wings (Kaleidos Scarlet Striker); snowflake white liner; blue waterline pops (Miss Matrix).
+    - Greens everywhere: lime/chartreuse to deep forest and olive (Lethal Serpentine, Lethal singles, Lethal x Dexter highlight tie‑ins).
   - Lips:
-    - Liner-heavy, dark-contoured mouths (Merlot/Dark Matter/Java); high-shine toppers; grey/nude taupes; metallics (teal); lip stains + balm topcoats.
-  - Cheeks/Highlight:
-    - Cool cherry-pink blush placements (across nose/temples), cream/liquid glow; fuchsia highlighter “sheen not sparkle”; suspended sparkle balms as halo accents.
+    - Dark brown liners (Java/Dark Matter) + iridescent glass balms (Kaleidos lip melts); taupe/gray balms, brown‑black gloss, metallic teal lips; thorn bite lip oils with blue‑green shimmer (Midnight Glow); lip stains blotted + balm top.
+  - Cheeks/Base:
+    - Cold cherry‑blossom pink blush (Snowdrop) across cheeks/temples; fuchsia cream luminizer (Apparition) for “color glow without glitter”; cream textures and soft-set powders; neutral‑undertone neutrals for “normie” looks on deeper skin tones.
 
 ## 3. Aesthetic & Hashtag Trends
 
 - Visual Themes:
-  - #gothmakeup, #grungemakeup, #softgoth + holiday (#festiveelegance) and tarot/gothic props (cards, skulls, candles).
-  - “Medieval core” curations (aged parchment shades, metals) and “oil-slick” lids (Crux).
-  - #pastelmakeup winter collabs; snowflake graphic liner; gem accents on graphic elements.
+  - #gothmakeup, #grunge, #softgoth meet holiday “grunge Christmas” palettes; #pastelmakeup snowflake graphics; “medieval core” monthlies; #wickedforgood green/pink shimmer curation; tarot‑themed flatlays; anime/fashion crossovers (Angel’s Egg).
+  - Wet/glossy textures (glitter eye gloss; lip oils); macro editorial “sparkle arcs” from inner corner to brow bone.
+
 - Color Stories:
-  - Grunge jewel tones (emerald/teal/forest), blurple suites, olive-mustard-gold, cool pink-violet accents, steel/graphite grey, and select true reds.
-  - Lips trend cool: greys/taupes, obsidian purples, berry stains; occasional metallic teal.
+  - Holiday red/green with depth (true reds, olives, forest greens, mustard); cool blurple stacks; oil‑slick silver/brown; lime/chartreuse accents; cherry‑blossom pink monochrome; gray/taupe lip tones; metallic teals.
 
 ## 4. Purchase-Intent Signals (From Comments)
 
 - “Add to Cart” Energy:
-  - Cosmic Beauty Death: “Yep, this shall be mine,” “buy it anyway.”
-  - Dede Festive Elegance: “Immediate add to cart,” “I need this palette.”
-  - Kaleidos: “I need that grey balm immediately,” “I cannot wait to wear this eyeliner,” “I got the red liner.”
-  - Rituel de Fille: “Going HAM for all freebies,” “I can’t wait to buy this!!”
-  - Lethal Serpentine: “I bought the palette,” “consider me tempted.”
-  - Clionadh: “Added Tessera to my BF order.”
+  - Cosmic Brushes Death: “Yep, this shall be mine,” “unique,” “inspiring.” Repeated comparison requests signal active pre‑purchase evaluation.
+  - Dede’s Signature Festive Elegance: “immediate add to cart,” “need this palette.”
+  - Rituel de Fille BF: “going HAM to hit $200+ for all freebies,” “I wasn’t going to buy… now I am.”
+  - Kaleidos Moon Arcade: “need that grey balm immediately,” “got the red liner.”
+  - Clionadh: “How do we buy? Link.” Shades added off creator recommendations.
+  - Unearthly Dead Cute lips: “bought the set just for the green.”
+
 - Restock Demands:
-  - Bella Beauté Bar Ocean Jewel “out of stock” noted; desire for return.
+  - Bella Beauté Bar Ocean Jewel out of stock (frustration + acceptance).
+  - Metallic true red shimmer: repeated desire for a red that stays red (no orange shift/black base); one follower “searching for a metallic red for a year”; comparison asks (Ruby Flame vs new reds).
+
 - Curiosity Clusters:
-  - “True sparkly red that doesn’t shift orange/black base?” (shadows)
-  - Comparison swatches: Death vs Sinister/Cooltrals/Smolder; Kaleidos lip melts vs prior lip glazes; red shimmer vs Ruby Flame.
-  - Tools: best brush for water-activated liners.
-  - Eye gloss: longevity/creasing trade-offs.
-  - Regional: UK availability for RdF BF exclusives.
+  - Comparisons: Cosmic Death vs Sinister/Cooltrals/Smolder; Kaleidos lip melts vs prior lip glazes; red shimmer comparisons.
+  - Tools: “Best brush for water‑activated liner?” (performance pain point).
+  - Wear: Eye gloss creasing longevity; “two pink setting powders why?” (technique education).
+  - Legitimacy/Logistics: “Is Amazon link legit?” (affiliate trust); UK availability for RdF.
 
 ## 5. Opportunities for the Store
 
 - Stocking Recommendations:
-  - Kaleidos Moon Arcade:
-    - Epiphany Glow eyeliners (Scarlet Striker, Miss Matrix, Moon Mechanic).
-    - Glass Load Lip Melts (Stranger grey, Geek Out lilac, sparkle toppers Cheat Code/Frizz Melt/Pixel Storm/Cypher) + lip liners (Merlot, Dark Matter, Java).
-  - Palettes with depth and holiday pull:
-    - Cosmic Beauty Death; Dede Signature Festive Elegance (plus the two gradient singles).
-    - Lethal Serpentine + Infinity Lip Stains (Deadly Nightshade).
-  - High-shine singles/topper ecosystem:
-    - Clionadh blurples (Tessera, Regal, Enamel, Statue Garden, Quest).
-    - Terra Moons Celestine Dust.
-    - Rituel de Fille Ghost Frequency (Crux, Apparition, Snowdrop, Midnight Glow, Hemlock).
-  - Accent lips:
-    - Unearthly Dead Cute lip bundle (olive “menacing metals,” Toxic Taffy); metallic teals (Jolie Beauty Earthly).
+  - Eyes/Palettes:
+    - Cosmic Brushes Death (forecast high sell‑through; offer comparison content to Sinister/Cooltrals/Smolder).
+    - Dede’s Signature Festive Elegance + magnetic gradient singles (iridescent inner‑corner toppers).
+    - Lethal Serpentine + new singles (green spectrum; note US shipping benefits).
+    - Shellwe x ghoul Nocturnal Flame (grays/blue‑greens + orange‑red; early momentum).
+    - Clionadh Stained Glass (curate blurple and “oil‑slick” picks: Tessera, Regal, Enamel, Etched, Stencil).
+  - Liners/Balms:
+    - Kaleidos Epiphany Glow Scarlet Striker (red), Miss Matrix (blue), Moon Mechanic (silver) + Lip Melts (gray/iridescent) + lip liners (Dark Matter/Java).
+  - Lips:
+    - Rituel de Fille Midnight Glow lip oil, Hemlock lip sheer; Unearthly Dead Cute lip bundle (olive metallic, lilac, hot pink).
+    - Jolie Beauty Magic Metallic (teal/earthly) style metallics.
+  - Accessories/Tools:
+    - High‑performing water‑activated liner brushes (answer the open question); SOS blending brush akin to Rose & Ben E29; colored mascaras (purple/green) to match trends.
+
+- Merchandising/Bundles:
+  - “Red Wing Kit”: Scarlet Striker + long‑wear eye base + jet mascara.
+  - “Grunge Christmas”: Green/red palette + holo/iridescent topper + neutral‑undertone neutrals.
+  - “Oil‑Slick Eye Set”: Gelée/gloss shadow + sticky base + silicone/synthetic flat applicator + crease‑rescue setting spray.
+  - “Blurple Edit”: 5‑pan Clionadh bundle with blue‑violet shifts + matching liner.
+  - “Alt Lip Stack”: Dark brown liner + gray/taupe balm + iridescent topper.
+
 - Content Strategy:
-  - Lean into comparison reels and “shade families” swatches (Death vs Sinister + “true red” showdown). These drove comments and conversion.
-  - Quick tutorial reels for graphic liner (snowflakes, block shimmer liner) featuring long-wear shimmer liners + tool callouts.
-  - “One-and-done lid” demos (Crux/gelée gloss; multichrome toppers) with honest creasing notes and base tips.
-  - Lip lab: liner + balm/glitter topper combos (grey/taupe + iridescent melt) — high save/share rate.
+  - Side‑by‑side swatch comparisons (answer Sinister/Cooltrals/Smolder; red shimmer lab test vs “turns orange/black base” problem).
+  - Macro sparkle reels with two lighting temps; “9 must‑grab shades” lists.
+  - Technique shorts: inner‑corner‑to‑brow sparkle arc; oil‑slick eye build (crease control); red graphic liner placement.
+  - Buyer enablement: code‑stacking/how‑to; region shipping notes; “palette builder is back” calls to action.
+
 - Gap Analysis:
-  - Fill the “true sparkly red, no black base/no orange shift” shadow gap (stock or commission indie singles precisely in this spec).
-  - UK/EU access: offer Rituel de Fille event shades where possible or provide region-friendly alternatives.
-  - Tools: curate a water-activated liner brush edit (fine detail + firm tip) and promote with graphic-liner content.
-  - Stock replenishment: BBB Ocean Jewel analogs or notify lists for restock.
+  - True metallic red shimmer (no orange shift/black base)—source/curate and prove it in macro/side‑by‑side.
+  - Region friction (UK RdF) — highlight compliant alternatives or EU stockists.
+  - Eye gloss longevity — stock/setters or hybrid glossy toppers with thinner films; educate on thin layers + anchoring mattes.
+  - Tools deficit — carry precise liner brushes and demonstrate line control on hooded/deep‑set eyes.
+  - Neutral‑undertone neutrals for deeper skintones — surface SKUs praised by WOC creators.
 
 ## 6. Special insights
 
-- Emerging Micro-Trends:
-  - Grey lip era: grey balms, taupe liquid lips, cool brown-black glosses — consistently praised and purchased across posts.
-  - Oil-slick lids as a staple: gelée/gloss textures (Crux) used alone or over smokey bases; acceptance of natural creasing for the payoff.
-  - Fuchsia, no-glitter highlighter (Apparition) as daily-cool color glow — an antidote to icy silvers.
-- Unexpected Pairings:
-  - Lip oil over lip sheer for dimensional, comfortable depth (Hemlock + Midnight Glow).
-  - Palette modularity: holiday palettes with swappable gradient singles to add inner-corner/brow-bone iridescents.
-  - Metallic teal lip topped with green sparkle (Unearthly over Jolie “Earthly”) — editorial lips moving product.
-- Creative insight:
-  - “Medieval core” curation boxes are an opportunity: pre-bundled jewel tones + parchment neutrals + metallic accents with a narrative (Gawain/illuminated manuscript themes). Pair with gothic silver “armor” accessories content to drive cross-category AOV.
-  - Winter pastels x graphic white: sell a “snowflake kit” (white water-activated liner, gem accents, long-wear shimmer liner) plus the right brush — users asked for brush recs.
-  - Blurple mania has legs: dedicate an iridescent-violet/blue editorial page (Clionadh + Terra Moons + Blurples from palettes) with daylight/flash swatch toggles to answer “link?” and “how to buy?” friction quickly.
+- Emerging Micro‑Trends (early signals):
+  - Gray/taupe lip balms and brown‑black glossy lips as everyday alt neutrals.
+  - Fuchsia “pure glow” cream highlighters (no sparkle) as color‑shift cheek lights.
+  - Inner‑corner glitter “spires” reaching brow bone as a signature sparkle map.
+  - Snowflake/holiday graphic liner returning in crisp six‑point designs.
+
+- Unexpected Pairings/Uses:
+  - Multi‑use blush balms (Snowdrop) as eye bases; lip sheers topped with iridescent balms; face highlighters (Bellabeautébar Dark Dreamscape) on lips/brow bone; blotted lip stains topped with balms for comfort + wear.
+
+- Creative Insight:
+  - Build a “Red Metallic Hunt” microsite: live comparison swatches (Ruby Flame vs Death red shimmer vs brand X), macro shifts, and undertone callouts to capture pent‑up demand.
+  - Launch a “Blurple Week” featuring Clionadh/indie singles with day/night eye maps and liner pairings.
+  - Create a “Medieval Core” capsule: aged parchment mattes, jewel‑tone metallics, yellowed contour (“jaundiced old painting” vibe), and colored mascaras—packaged with a story card (art history tie‑ins).
+  - Maintain a “Comparison Library” highlight for hot palettes; it directly reduces purchase friction (“Will you compare to Sinister?” comments were frequent).
+
+Overall: Lean into alt‑holiday grunge with proof‑based comparisons, macro sparkle storytelling, and problem‑solving kits (true red shimmer; crease‑smart gloss). This week’s audience came ready to buy—make choosing easy, clear, and shippable.
