--- a/2026/week_7/insta_weekly_2026_7_gpt-5-2025-08-07.md
+++ b/2026/week_7/insta_weekly_2026_7_gpt-5-2025-08-07.md
@@ -1,105 +1,106 @@
 # Weekly Instagram Beauty Media Landscape Report
 
-- Key Takeaway: Feb 9–15, 2026 leaned blue, sparkly, and grungy. Shine by SD x glamsmitty “Blue Hues” drove buzz and conversions, while vampy luxury lips and Y2K pink glosses spiked interest; short tutorials and technique education outperformed static posts for purchase intent.
+- Key Takeaway: Feb 9–15, 2026 skewed ultra-sparkly and alt: blue shimmer eyes and vamp/grey-brown lips led the feed, anchored by the Shine By SD x @glamsmitty Blue Hues launch and Bella Beauté Bar’s Dead Roses II; short tutorial Reels and swatch explainers drove the highest intent and saves.
 
 ## 1. Overview
 
 - The Vibe:
-  - Sparkle-forward eye looks (duo/multichromes, chrome flakes) with a decisive blue-teal wave.
-  - Parallel lip stories: moody vamp (Chanel Rouge Noir energy) and candy-pink Y2K gloss.
-  - High volume of swatch reels, eye swatch close-ups, and quick-placement tutorials; multiple indie launches seeded throughout the week.
-
+  - Collab-heavy week with launch build-up, eye-swatches, and chrome “transformations.”
+  - Tutorials split between complexion education (foundation blending, undertones, blush placement) and fast lip combo shorts.
+  - Valentine’s content bifurcated: hot-pink Y2K glosses vs goth/vamp lips; blue sparkle cut through the holiday pink.
 - Engagement Temperature:
-  - Warm-to-hot. Frequent “ordered,” alarms set, and shade-favorite debates on Blue Hues and Dead Roses II.
-  - Technique content (foundation blending, blush placement, VB vs MUA foundation) drew robust Q&A and save-worthy comments.
-  - A few friction notes (discount code failure on Wicked Widow; texture concerns on r.e.m. blushlighters).
+  - Hot. Multiple “ordered/alarm set” comments for Blue Hues and “just bought” for Dead Roses II.
+  - High Q&A under gloss/blushlighter posts (texture, shift, tone). Educational reels garnered gratitude and discussion.
 
 ## 2. Product Momentum (Brand & Item Velocity)
 
 - Top Mentioned Brands:
-  - Shine by SD, Bella Beauté Bar, Glisten Cosmetics, Blend Bunny, Fenty Beauty, Unearthly Cosmetics, Kiko Milano, Milk Makeup, Melt Cosmetics, r.e.m. beauty, MAC (base/mascara), Danessa Myricks, Cosmic Brushes, Viseart, Byredo, MBA Cosmetics, M81.
+  - Shine By SD x @glamsmitty (Blue Hues 5-pan shimmer)
+  - Bella Beauté Bar (Dead Roses II, Crystallize; liners and Sparkle Balms)
+  - Fenty Beauty (Killawatt Wattabrat + new WhattaB Gloss Bomb)
+  - Glisten Cosmetics (Spectra stamp/lash, black pencil; new grey lip stain; Chroma Gloss)
+  - Blend Bunny (Diabla collab, Lins palette; pencils; lashes)
+  - r.e.m. beauty (cream blushlighters)
+  - Melt Cosmetics (Blurr Cream Primer; Barely Blushing pink powder; Welcome to Derry)
+  - Cosmic Brushes (Death palette; Astral Radiance blue highlight; liners/lipstick)
+  - Milk Makeup (Shimmer Sticks; Hydro Grip Gel Concealer)
+  - Plus: Unearthly (Made a Monster), Lethal (Luminol), Terra Moons, Fyrinnae Pixie Epoxy, Kiko Milano glosses, Byredo Vesuvio, Viseart Apricotine, MBA Cosmetics Prism, Wicked Widow Rocky Horror, Dede’s Signature palettes, Gourmande Girls.
 
 - Viral Products:
-  - Shine by SD x glamsmitty Blue Hues (5-pan blue-leaning sparkly singles): multiple reels, eye swatches, launch-day “ordered” comments, wishlist behavior.
-  - Bella Beauté Bar Dead Roses II collection (palette, highlight, Cosmic Dust Dream Sparkle Balm): repeated tutorials, “want it all,” “can’t wait to receive.”
-  - Fenty Wattabrat (Killawatt highlighter + new Gloss Bomb): repeat reels, “new favorite gloss,” cross-brand dupe questions.
-  - Unearthly Cosmetics Made a Monster: chrome surprise, wishlist adds, purchase confirmations.
-  - Glisten Cosmetics grey lip stain: novel “alt” lip that photographed well layered with violet gloss.
-  - Kiko Milano Valentine’s gloss “Slay Berry”: strong aesthetic match to the week’s moody pinks.
-  - Technique drivers: Melt Blurr Cream primer + “Barely Blushing” pink setting powder; Milk Makeup Hydro Grip Gel Concealer and Shimmer Sticks (“break the top film” tip boosted appeal).
-  - Niche sparkle: Sheen Effect “Starlight City” multichrome (C-beauty) repeat endorsements; MBA “Prism” split pans and M81 dry, high-sparkle singles for tacky-base lovers.
+  - Shine By SD Blue Hues: “Alarm was set…just ordered!”; “Need her NOW”; repeated eye-swatch reels and palette assembly BTS.
+  - Bella Beauté Bar Dead Roses II: “Just bought this…”; “I really can’t wait to receive this”; multiple creators posting looks/swatch stacks.
+  - Fenty Wattabrat + WhattaB gloss: multiple reels; “my new favorite gloss”; requests for dupes/comparisons.
+  - Glisten grey lip stain: “I need this!”; “grabbed it…at launch”; strong novelty factor.
+  - r.e.m. beauty blushlighters: curiosity plus texture debate; “on trend” cream glow without sparkle.
 
 - The “Look” Breakdown:
-  - Eyes: Blue/teal metallics and icy toppers; high-shine duos with hollow flecks; inner-corner pops; chrome flakes; stamped graphic accents (Glisten Spectra); blackened shimmer for depth; aegyosal highlights.
-  - Lips: Two poles—vampy oxblood/rouge-noir metallics and high-shimmer pink glosses; grey-stain overlays and blurred ombré “Skullpanda” gradients.
-  - Cheeks/Base: Luminous blush toppers/blushlighters (cream and powder), pink/lavender tone-correcting setting powders, blurred-matte priming; visible glow layered over filtered bases.
+  - Eyes: Blue-forward shimmer (icy to teal), holographic specks, heavy sparkle toppers; lime/chartreuse and antique-gold inner corners; graphic liner (bat-wing spikes, aegyosal emphasis); rainbow heart/balloon motifs; dry-pressed sparkles applied over tacky bases (Fyrinnae Pixie Epoxy).
+  - Lips: Moody brown gloss (MOB Linger, Cosmic “10 out of 10”), grey stain layered with iridescent pink gloss (Isamaya), vamp purple/“Rouge Noir,” smudged gradient/black-edged liners.
+  - Cheeks: Shimmery blush-lighters (r.e.m., Huda Blush Filter baby pink), blue sheen highlights (Cosmic Brushes), Milk Shimmer Sticks; pink-tinted blurring powders (Melt Barely Blushing).
 
 ## 3. Aesthetic & Hashtag Trends
 
 - Visual Themes:
-  - #bluemakeup, #sparklymakeup, #blueeyeshadow, #gothmakeup, #grungemakeup, #rainbowmakeup (Valentine hearts), #editorialmakeup stamps, Y2K gloss energy.
+  - #bluemakeup #sparklymakeup #multichromeeyeshadow #gothmakeup #grungemakeup #rainbowmakeup #editorialmakeup
+  - Alt-Valentine: hearts, chrome shapes, but also vampy noir and grey.
+  - Education-first complexion content trending (#foundation technique, #undertone, #blushplacement).
 
 - Color Stories:
-  - Dominant: Cobalt/teal/icy blue with multicolored sparkle.
-  - Pink lane: Baby pink to fuchsia, often with blue-violet sparkle shifts.
-  - Grunge accents: Antique gold/yellow, murky olives, blackened purples.
-  - Lips: Oxblood/rouge noir, taupe-mauve glossed blurs, experimental grey.
+  - Electric blues/teals/cobalt; hot fuchsia and Y2K baby pink; lime/chartreuse/yellow pops; chocolate/espresso lips; grey and dusty purple vamp; cool blue/purple highlighters; apricot-coral + warm chocolate (Viseart/Byredo).
 
 ## 4. Purchase-Intent Signals (From Comments)
 
 - “Add to Cart” Energy:
-  - Blue Hues: “Alarm was set—just ordered,” “Need her NOW,” “How much?” Limited-quantity prompts accelerated checkout.
-  - Dead Roses II: “Want it all,” “Can’t wait to receive,” “Ready to dive head first.”
-  - Fenty Wattabrat: “My new favorite gloss,” “I want the gloss and highlighter,” ownership confirmations.
-  - Sheen Effect multichromes: Multi-shade ownership, “Thanks for introducing the brand,” new purchases cited.
-  - Melt Blurr/Barely Blushing: “I need to order this.”
+  - “Alarm was set for 10:30 – just ordered!” (Blue Hues launch)
+  - “Just bought this & some other bellabeautebar palettes” (Dead Roses II)
+  - “I really can’t wait to receive this” (Dead Roses II swatches)
+  - “I need this!” (Glisten grey lip stain)
+  - “Going to be purchasing [MUA] when I run out” (MUA vs VB foundation dupe test)
 
-- Restock/Checkout Friction:
-  - Wicked Widow code reported as not working (conversion risk).
-  - r.e.m. blushlighters: intrigue vs concerns (“all gold,” possible texture emphasis).
+- Restock Demands:
+  - Not explicit, but “limited quantities” on Blue Hues + alarms set suggests rapid sell-through potential.
 
 - Curiosity Clusters:
-  - Texture/Formula: “Are Blue Hues emollient or dry?” (dry-sparkly wins), “Use tacky base?” (Fyrinnae Pixie Epoxy praised).
-  - Complexion: Undertone discovery (olive difficulty), lavender/purple-setting powder recs.
-  - Comparisons/Dupes: Chanel Rouge Noir lip dupe hunt; Unearthly chromes vs Clionadh/Terra Moons; NYX Buttermelt highlighter as Wattabrat dupe.
-  - Technique: Puff vs fingers; ND Hy-Glam dry-down; blush placement freedom; aegyosal creation.
+  - Texture/Formula: “Are they quite emollient or more dry?” (Blue Hues); “Are they gritty?” (sparkly glosses)
+  - Shade nuance: “Difference…Fenty darker pink vs Fuchsia Flex?”; “lavender powder recs?”
+  - Safety/comfort: Jcat plumping sting noted as strong
+  - Technique: foundation “finger test,” undertone matching exercises, flexible blush placement
 
 ## 5. Opportunities for the Store
 
 - Stocking Recommendations:
-  - Sparkly blues and toppers: Curate a Blue Hues-adjacent edit—icy toppers, teal/cobalt metallics, hollow-fleck shimmers (Shine by SD, M81, MBA Prism, Sheen Effect; include tacky bases like Pixie Epoxy).
-  - Grungy romance palettes: Bella Beauté Bar Dead Roses II (palette + highlight), Unearthly Made a Monster; pair with “sparkly balms” (BBB Cosmic Dust, Isamaya Ultraviolet).
-  - Lip bar refresh:
-    - Y2K pink gloss spectrum (Fenty Wattabrat, Half Magic Y2K Cherub, Kiko 48, Lethal Patch, ColourPop 2 Die 4, JCat Lust Boost).
-    - Vampy bullets/stains and metallic darks (offer Chanel Rouge Noir-adjacent shades and alt-indie options).
-    - Novelty/alt: Glisten Grey Lip Stain, deep berry stains, gradient kits (pale taupe liners + center-depth bullets).
-  - Base and tools: Melt Blurr Cream + pink/lavender brightening powders; Milk Hydro Grip Gel Concealer; pro puffs and soft-blend brush sets (rephr/Singe); chrome flakes for high-impact toppers.
+  - Sparkly Blue Eye Edit: Shine By SD Blue Hues or similar blue-leaning, holo-fleck shimmers; tacky base (Fyrinnae Pixie Epoxy) to pair.
+  - Grungy Sparkle Palettes: Bella Beauté Bar Dead Roses II; Unearthly Made a Monster; Wicked Widow Rocky Horror; Byredo Vesuvio (lux alt).
+  - Lip Bar Expansion: Grey stain (Glisten), vamp purple/rouge-noir bullets and lacquers (Chanel analogue), chocolate-brown creams, moody gloss toppers (Isamaya, Lisa Eldridge, NYX/Jcat at budget).
+  - Glow Segment: r.e.m. cream blushlighters (non-sparkle sheen), Milk Shimmer Sticks, Cosmic Brushes blue highlight.
+  - Base Tools: Melt Barely Blushing pink powder, Blurr Cream primer; puffs/flat brushes for press-and-push technique.
 
 - Content Strategy:
-  - Short, labeled eye-placement reels and lip-combo shorts convert best; pair with in-caption shade maps and shade names on-screen.
-  - “Texture talk” sells sparkle: show finger vs brush, tacky base demos, indoor/daylight A/B.
-  - Technique education (foundation “finger test,” blush placement freedom, undertone training) drives comments, saves, and trust—anchor with linked product kits.
-  - Launch cadence: Pre-launch teases + giveaway + eye swatches + launch-day CTA mirrored Blue Hues’ conversion arc—replicate for future drops.
+  - Short, labeled eye-swatch reels (on-eye, placement overlays) and lip-combo shorts convert.
+  - Side-by-side “save vs spend” complexion tests (MUA vs VB) drive debate and purchase.
+  - Educational micro-lessons (undertone training, “push-in” foundation) outperform static content.
+  - Launch journey/BTS assembly clips humanize indie drops and spark wishlist adds.
 
 - Gap Analysis:
-  - Demand for pigmented milky-pink glosses (less sheer); curate and test on deeper complexions.
-  - Olive undertone solutions (concealers/foundations in true olive; undertone tools/content).
-  - Texture-friendly luminous blush toppers beyond gold; cream options that don’t emphasize pores.
-  - Ensure discount codes and checkout work at launch to avoid Wicked Widow-style friction.
+  - Customers wary of glitter emphasizing texture—curate finely milled sparkles and show “texture-friendly” application.
+  - Demand for tinted setting powders (pink/lavender) with undertone guidance—bundle with quick undertone quiz or tutorial.
+  - Plumping gloss sensitivity—offer low-tingle alternates and clearly mark sting level.
+  - Packaging pain point (tiny cream pots)—prioritize user-friendly pan sizes for bronzer/cream color.
 
 ## 6. Special insights
 
 - Emerging Micro-Trends:
-  - Blue inner-corner “icelight” paired with warm/grunge mattes.
-  - Grey-stained lips layered with violet/UV gloss (editorial but wearable on-camera).
-  - Stamp motifs (stars/hearts/bleach lashes) as micro-accessories for otherwise classic eyes.
+  - Grey lip stain layered with pink/blue-shift gloss (grey + candy tones) as an alt-Valentine statement.
+  - Blue highlighter as a daily cheek sheen (not just inner corner).
+  - Bleached/colored lashes (Glisten Bleach/Soybean, Maroon) edging into mainstream looks.
+  - Holographic speck inclusion in shimmers (callouts to “holo” flecks across Blue Hues).
 
 - Unexpected Pairings:
-  - Face highlighters as eye toppers (Fenty Wattabrat; Lethal Luminol outside-eye gleam).
-  - Sparkly balms over lip liners/stains for dimensional “glass grime.”
-  - Chrome flakes dropped on soft pink mattes—Valentine to villain in one tap.
+  - Black eyeliner pencils repurposed as lip liners; ash-grey waterlines to cool down hot-pink eyes.
+  - Warm metallics from luxury palettes used as luminous blush/highlight duos (Byredo/Viseart).
+  - Lime/chartreuse inner corners with magenta lids—high-contrast focal point creators replicate.
 
 - Creative insight:
-  - “Dry, high-sparkle pressed” formulas are winning over “squishy” textures this week; position a “no-fallout sparkle” edit with tacky-base education.
-  - Magnetic minis (curated 5-pans) resonate for both creators and shoppers—merchandise build-your-own sparkly quints by color story (Blue, Grunge Gold, Vamp Mauve).
-  - Lean into “permission content”: creators’ push against strict rules (blush anywhere, mix multiple palettes) unlocks play—and baskets. Bundle “freedom kits” with mixed finishes plus tool/puff add-ons.
+  - “Palette hopping” (mixing 2–4 palettes per look) is creator-normal; shoppers follow this behavior. Merchandize micro-curations by color story (Blue Sparkle Capsule; Grunge Rainbow; Vamp Lip Wardrobe) across brands.
+  - Blue is spring’s disruptor: position blue shimmer toppers and teal/cobalt singles as the season’s hero SKUs, not just pinks.
+  - For conversions, pair every dry, high-sparkle formula with a recommended tacky base and a “finger vs brush” demo clip; it answers the top friction points before they’re asked.
